.kubernetes/terminal-mirror-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal-mirror-com
  annotations:
    kubernetes.io/change-cause: "%DATE% sha: $CI_COMMIT_SHORT_SHA"
  labels:
    app: terminal-mirror-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal-mirror-com
  template:
    metadata:
      name: terminal-mirror-com
      labels:
        app: terminal-mirror-com
    spec:
      imagePullSecrets:
        - name: harbor.netblink.pl
      containers:
      - name: apache-terminal-mirror-com
        image: harbor.netblink.pl/terminal-mirror/base:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80

      - name: curl-terminal-mirror-com
        image: harbor.netblink.pl/terminal-mirror/base:master
        imagePullPolicy: Always
        command: ["bash","-c"]
        args: ["cd /share && php artisan server:curl-in"]
        ports:
        - containerPort: 3006

      - name: ws-terminal-mirror-com
        image: harbor.netblink.pl/terminal-mirror/base:master
        imagePullPolicy: Always
        command: ["bash","-c"]
        args: ["cd /share && php artisan server:terminal"]
        ports:
        - containerPort: 3005

      - name: redis-trminal-mirror-com
        image: redis:5.0.12
        ports:
        - containerPort: 6379
