.kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminal-mirror-com-service
spec:
  type: ClusterIP
  selector:
    app: terminal-mirror-com
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: curl-terminal-mirror-com-service
spec:
  type: ClusterIP
  selector:
    app: terminal-mirror-com
  ports:
  - protocol: TCP
    port: 3006
    targetPort: 3006

---

apiVersion: v1
kind: Service
metadata:
  name: ws-terminal-mirror-com-service
spec:
  type: ClusterIP
  selector:
    app: terminal-mirror-com
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
