.kubernetes/ingress-live.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: terminal-mirror-com-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-production
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - terminalmirror.com
    secretName: terminal-mirror-tls
  rules:

  - host: "terminalmirror.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: terminal-mirror-com-service
          servicePort: 80

  - host: "www.terminalmirror.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: terminal-mirror-com-service
          servicePort: 80
